All the bugs are fixed and working perfectly